Revision history for ExtUtils-HasCompiler

{{$NEXT}}
          Return false early on static perls

0.004     2015-06-26 03:13:56+02:00 Europe/Amsterdam
          Fix MSVC regression
          Only use env-vars when no config is passed
          Rely on config to be overriden instead of adding yet another way to override
          Give clearer errors on compilation failure

0.003     2015-05-30 19:33:33+02:00 Europe/Amsterdam
          Prefer environmental variables over configuration (experimental)
          Get rid of Perl::OSType dependency

0.002     2015-04-19 19:18:10+02:00 Europe/Amsterdam
          Switch to ExtUtils::MakeMaker

0.001     2015-04-19 16:54:07+02:00 Europe/Amsterdam
          Initial release to an unsuspecting world