@@ -2,6 +2,7 @@ Revision history for ExtUtils-HasCompiler
 
 {{$NEXT}}
           Return false early on static perls
+          Get rid of can_compile_executable
 
 0.004     2015-06-26 03:13:56+02:00 Europe/Amsterdam
           Fix MSVC regression
